# pubky-app-ffi

./: Cargo.toml  README.md  build_android.sh  build_ios.sh  build_python.sh
bindings/android/: pubkyapp.kt  pubkysocialmobile.kt
bindings/ios/: module.modulemap  pubkyapp.swift  pubkyappFFI.h  pubkysocialmobile.swift  pubkysocialmobileFFI.h
bindings/ios/PubkyApp.xcframework/: Info.plist
bindings/ios/PubkyApp.xcframework/ios-arm64/Headers/: module.modulemap  pubkyappFFI.h
bindings/ios/PubkySocialMobile.xcframework/: Info.plist
bindings/python/: README.md  setup.py
bindings/python/pubkyapp/: pubkyapp.py
example/: main.rs
src/: auth.rs  lib.rs
src/models/: auth.rs  bookmark.rs  file.rs  mod.rs  post.rs  tag.rs  user.rs
src/traits/: hash_id.rs  mod.rs  timestamp_id.rs  validatable.rs
src/utils/: constants.rs  helpers.rs
tests/: common.rs  lib_test.rs
