[package]
name = "pubkyapp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]
name = "pubkyapp"

[[bin]]
name = "example"
path = "example/main.rs"

[[bin]]
name = "uniffi-bindgen"
path = "src/bin/uniffi-bindgen.rs"

[dependencies]
uniffi = { version = "0.25.3", features = [ "cli" ] }
serde_json = "1.0.114"
hex = "0.4.3"
sha2 = "0.10.8"
serde = { version = "^1.0.209", features = ["derive"] }
tokio = "1.40.0"
url = "2.5.2"
base64 = "0.22.1"
once_cell = "1.19.0"
uuid = { version = "1.10.0", features = ["v4"] }
chrono = "0.4.38"
async-trait = "0.1.82"
axum = "0.7.7"
base32 = "0.5.1"
blake3 = "1.5.4"
pubky = "0.3.0"
pkarr = "2.2.1-alpha.2"
pubky-common = "0.1.0"

[dev-dependencies]
tokio = { version = "1.40.0", features = ["full"] }
serde_json = "1.0.114"
hex = "0.4.3"